--- a/Task-manager/package.json
+++ b/Task-manager/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "mongodb": "^4.1.4",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "validator": "^13.7.0"
   }
 }
