--- a/Task-manager/package.json
+++ b/Task-manager/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon src/index.js"
+  },
   "dependencies": {
+    "express": "^4.17.1",
     "mongodb": "^4.1.4",
     "mongoose": "^6.0.12",
     "validator": "^13.7.0"
