--- a/Task-manager/package.json
+++ b/Task-manager/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
     "mongoose": "^6.0.12",
