--- a/Task-manager/package.json
+++ b/Task-manager/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.4",
     "mongoose": "^6.0.12",
     "validator": "^13.7.0"
