--- a/Task-manager/package.json
+++ b/Task-manager/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "test":"jest"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -15,5 +16,8 @@
     "multer": "^1.4.3",
     "sharp": "^0.29.3",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "jest": "^27.4.3"
   }
 }
